# ALIGNIFYC

./: .gitignore  ADVANCED_REGISTRATION_ARCHITECTURE.md  ADVANCED_REGISTRATION_PLAN.md  ADVANCED_REGISTRATION_STATUS.md  ARCHITECTURE.md  BOOTSTRAP_EXAMPLE.md  BOOTSTRAP_SOLUTION.md  BOOTSTRAP_VOXELMORPH.md  BUILD_STATUS_REPORT.md  CAMERA_BINDINGS_SUCCESS.md  CAMERA_BUFFER_FIX_SUCCESS.md  CAMERA_CONFIGURATION_IMPLEMENTATION.md  CAMERA_CONFIG_ARCHITECTURE.md  CAMERA_CONFIG_COMPLETE.md  CAMERA_CONFIG_FINAL_REPORT.md  CAMERA_CONFIG_FIXES.md  CAMERA_CONFIG_QUICK_GUIDE.md  CAMERA_CONFIG_SETUP.md  CAMERA_CONFIG_SUMMARY.md  CAMERA_DOCS_INDEX.md  CAMERA_FRAME_CAPTURE_SUCCESS.md  CAMERA_FULLY_OPERATIONAL.md  CAMERA_GENCP_INTEGRATION.md  CAMERA_INTEGRATION_FINAL_STATUS.md  CAMERA_INTEGRATION_GUIDE.md  CAMERA_INTEGRATION_SUCCESS.md  CAMERA_QUICK_REFERENCE.md  CHANGES_2025-01-11.md  CMakeLists.txt  COMPARISON_TAB_FIX.md  CORRECTED_WORKFLOW.md  DEBUG_MODE_IMPLEMENTATION.md  DETERMINISTIC_OPTIMIZER_SUCCESS.md  DIAGRAMS.md  DOWNSAMPLING_FIX_2025-01-14.md  ELASTIX_ASGD_TRUTH.md  ELASTIX_CONVERGENCE_OPTIMIZATION.md  ELASTIX_CONVERGENCE_QUICKREF.md  ELASTIX_OPTIMIZATION_RESULTS.md  ELASTIX_OPTIMIZATION_SUMMARY.md  (+45 more)
config/: elastix_clean.txt  elastix_config.yaml  pattern_designer_state.json  system_config.yaml
config/camera/: FGConfig.gxfg
docs/: CAMERA_IMPLEMENTATION_GUIDE.md  CPP_MODULES_REFERENCE.md  MEMORY_OPTIMIZATION_CONVERSATION_2025-01-14.md
examples/: backup_usage.py  main_pipeline.cpp
gui/: __init__.py  deformationField.mhd  main_gui.py  main_gui.py.backup
gui/themes/: dark.qss  light.qss
gui/widgets/: __init__.py  advanced_elastix_dialog.py  background_workers.py  camera_config_dialog.py  camera_config_manager.py  canvas_widget.py  control_point_editor.py  deformation_viewer.py  elastix_output_decoder.py  image_viewer.py  layer_manager.py  manual_correction_tab.py  manual_correction_tab_old.py  manual_deformation_editor.py  method_comparison_dialog.py  performance_monitor.py  tiling_pattern_editor.py
include/alinify/camera/: camera_interface.h  gidel_camera.h
include/alinify/common/: logger.h  types.h
include/alinify/gpu_warp/: cuda_warper.h
include/alinify/preprocessing/: image_processor.h
include/alinify/printer/: printer_interface.h
include/alinify/registration/: elastix_wrapper.h
include/alinify/stitching/: strip_stitcher.h
python/: elastix_config.py  elastix_parameter_guide.py  elastix_registration.py  elastix_registration.py.backup  elastix_registration.py.backup2  pipeline.py  registration_backend.py  registration_backend.py.backup  test_gui_warp_integration.py  test_manual_correction_tab.py  test_manual_editor_enhancements.py  test_new_features.py  test_real_images.py  test_warp_performance.py  warp_acceleration.py  warp_acceleration.py.backup  warp_acceleration.py.backup2
python/advanced_registration/: README.md  __init__.py  feature_detectors.py  optical_flow.py  tps_registration.py  voxelmorph_backend.py  voxelmorph_backend_pytorch_old.py  voxelmorph_pytorch.py
src/camera/: CMakeLists.txt  gidel_camera.cpp
src/core/: CMakeLists.txt
src/gpu_warp/: CMakeLists.txt  cuda_warper.cpp
src/preprocessing/: CMakeLists.txt  image_processor.cpp
src/printer/: CMakeLists.txt  printer_interface.cpp
src/python_bindings/: CMakeLists.txt  bindings.cpp
src/registration/: CMakeLists.txt  elastix_wrapper.cpp
src/stitching/: CMakeLists.txt  strip_stitcher.cpp
tests/: preproc_smoke.py  test_advanced_registration.py
utils/: auto_backup.py  multicore_processing.py
